# fishsense-mobile

./: .flutter-plugins-dependencies  .gitignore  .gitmodules  .swiftlint.yml  CLAUDE.md  Makefile  README.md  analysis_options.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset  package_graph.json
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/extension_discovery/: vs_code.json
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.github/workflows/: build.yaml  codeql.yml
AVCam.xcworkspace/: contents.xcworkspacedata
FishSense.xcworkspace/: contents.xcworkspacedata
Objective-C/AVCam Objective-C.xcodeproj/: project.pbxproj
Swift/AVCam/: CameraViewController.swift
Swift/AVCam Swift.xcodeproj/: project.pbxproj
Swift/FishSense/: AppDelegate.swift  CameraViewController.swift  Entitlements.plist  ImageGallery.swift  ImageViewController.swift  Info.plist  PhotoCaptureDelegate.swift  PhotoViewController.swift  PreviewView.swift  SphereNode.swift  ViewController+CoachingOverlay.swift  ViewController.swift  Zipping.swift
Swift/FishSense Swift.xcodeproj/: project.pbxproj
android/: build.gradle  settings.gradle
android/app/: build.gradle
hook/: build.dart
ios/: .gitignore  ARViewPlatformView.swift  Podfile
ios/Flutter/: Debug.xcconfig  DeveloperSettings.example.xcconfig  Release.xcconfig
ios/Runner/: ARKitManager.swift  ARViewPlatformView.swift  AppDelegate.swift  FishSenseChannel.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/RunnerTests/: RunnerTests.swift
ios/fastlane/: Appfile  Fastfile  (+1 more)
lib/: camera_screen.dart  coordinate_utils.dart  database.dart  extensions.dart  logger.dart  main.dart  models.dart  photo_gallery_screen.dart  services.dart
linux/: CMakeLists.txt  my_application.cc
rust-bridge/: .gitignore  Cargo.toml  Makefile  README.md  build.py  get_arch  pyproject.toml  rust-toolchain.toml
rust-bridge/.cargo/: config.toml
rust-bridge/include/: module.modulemap
rust-bridge/src/: lib.rs
test/: geocoding_service_test.dart  map_bounds_test.dart  models_test.dart  onboarding_state_test.dart  rust_service_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+89 files in other folders)
